# recz

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  nginx.conf  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy.yml
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/app/: main.py  worker_client.py
apps/api/app/api/v1/: clustering.py  events.py  filter.py  images.py  people.py  places.py  search.py
apps/api/app/core/: auth.py  config.py  prisma.py  qdrant.py  storage.py
apps/web/: Dockerfile  Dockerfile.migrate  Dockerfile.prod  README.md  entrypoint.sh  middleware.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: arc-gallery-hero-component.tsx  scroll-morph-hero.tsx
apps/web/icons/: index.tsx
apps/web/interface/: index.ts
apps/web/lib/: api.ts  auth.ts  db.ts  email.ts
apps/web/styles/: app-dashboard.css  variables.css
apps/web/utils/: generateMetaData.ts
apps/worker/: Dockerfile  README.md  celery_app.py  clustering_pipeline.py  config.py  embedding_tasks.py  minio_client.py  models.py  pipeline.py  pyproject.toml
apps/worker/stages/: __init__.py  clustering.py  event_cluster.py  face_analysis.py  metadata.py  place_group.py  scene_embed.py  thumbnail.py
apps/worker/storage/: __init__.py  postgres_store.py  qdrant_store.py
tests/: test_face_analysis.py  test_metadata.py  test_pipeline_integration.py
tests/fixtures/: .gitkeep
(+65 files in other folders)
