[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "face-ai-api"
version = "0.1.0"
description = "Face-AI FastAPI upload gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "celery[redis]>=5.3",
    "prisma>=0.15",
]

[tool.setuptools.packages.find]
where = ["."]
